--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "discord.js": "^12.2.0",
     "express": "^4.17.1",
     "overwatch-stats-api": "^2.1.0",
+    "r6api.js": "^1.5.0",
     "rainbowsix-api-node": "0.0.1",
     "request": "^2.88.2"
   }
