--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "whatland",
   "license": "ISC",
   "dependencies": {
+    "call-of-duty-api": "^1.2.16",
     "dblapi.js": "^2.4.1",
     "discord.js": "^12.2.0",
     "express": "^4.17.1",
