--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "overwatch-stats-api": "^2.1.0",
     "r6api.js": "^1.5.0",
     "rainbowsix-api-node": "0.0.1",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "wrapzone": "^1.1.1"
   }
 }
